fix news whitespace bug

--- a/css/section.scss
+++ b/css/section.scss
@@ -27,6 +27,7 @@ body {
     box-sizing: content-box;
     padding: 60px 40px; // fallback
     padding: 60px Max(40px, calc((100% - #{$page}) / 2));
+    text-align: center;
 
     &[data-full="true"] {
       padding: 60px 40px;
